mask overflow prevented

--- a/assets/base/base.scss
+++ b/assets/base/base.scss
@@ -34,6 +34,7 @@ body {
 
     &.page--homepage {
         background: url('/img/deco-top.png') no-repeat center 0;
+        overflow-x: hidden;
     }
 
     &.page--background-shifted {
